# medvision

./: .dockerignore  .gitattributes  .gitignore  README.md  ROADMAP.md  render.yaml
_legacy/: khv_original.py  preprocessing_original.py
backend/: Dockerfile  README.md  requirements.txt
backend/app/: __init__.py  audit.py  auth.py  config.py  db.py  main.py  ml.py  models_db.py  reports.py  schemas.py
backend/model/: metrics.json
backend/tests/: test_api.py  test_auth.py  test_ensemble_persistence.py  test_research.py
docs/: KAGGLE_SETUP.md
docs/datasets/: Dataset Shortlist.docx
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Backdrop3D.tsx  (+14 more)
ml/: pyproject.toml
ml/scripts/: crop_mammography_from_masks.py  demo_pipeline.py  download_data.py  evaluate.py  explain.py  log_experiment.py  prepare_cbis_ddsm.py  prepare_cbis_ddsm_bbox.py  prepare_data.py  prepare_mias.py  prepare_rsna.py  seed_patients_from_dataset.py  train.py
ml/src/medchron/: __init__.py  config.py
ml/src/medchron/data/: __init__.py  manifest.py  registry.py  split.py
ml/src/medchron/explain/: __init__.py  gradcam.py
ml/src/medchron/imaging/: __init__.py  enhancement.py  pipeline.py  quality.py  roi.py  segmentation.py
ml/src/medchron/models/: __init__.py  backbone.py  dataset.py  detect.py  evaluate.py  inference.py  segment.py  train.py
ml/tests/: test_data.py  test_detect.py  test_ensemble.py  test_imaging.py  test_models.py  test_multilabel.py  test_segment.py
(+38 files in other folders)
