[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medchron"
version = "0.1.0"
description = "MedChron AI — medical imaging intelligence platform (ML core)"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aditya Sahoo" }]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
# Deep learning is intentionally NOT a hard dependency of the imaging core, so
# the DIP package installs and tests cleanly without a heavy framework.
# Pick ONE backend when you build the model layer (see README "GPU on Windows").
tf = ["tensorflow>=2.15", "scikit-learn>=1.3", "pandas>=2.0", "matplotlib>=3.7"]
torch = ["torch>=2.2", "torchvision>=0.17", "scikit-learn>=1.3", "pandas>=2.0", "matplotlib>=3.7"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '-q -m "not heavy"'
markers = [
    "heavy: memory/time-intensive tests (e.g. full VGG16); deselected by default",
]

[tool.ruff]
line-length = 100
